<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="__picker_all_image">所有图片</string>
    <string name="__picker_image_count">%1$d张</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="account">账户 : %1$s</string>
    <string name="add">添加</string>
    <string name="alipay">支付宝</string>
    <string name="app_name">Smart Kitchen</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bluetooth">蓝牙</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="button_cancel">取消</string>
    <string name="button_plus">+</string>
    <string name="button_reduce">-</string>
    <string name="button_sure">确认</string>
    <string name="camera">拍照</string>
    <string name="cancel">取消</string>
    <string name="cancellation_order_comment">备注 : %1$s</string>
    <string name="cancellation_order_yes_or_not">该订单即将作废,是否同意?</string>
    <string name="cash">现金</string>
    <string name="cashier_login_system">收银登录系统</string>
    <string name="change">交接</string>
    <string name="change_time">时间 : %1$s</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="check_goods_function">退单申请提醒</string>
    <string name="choose_bluetooth_device">选择蓝牙设备</string>
    <string name="choose_usb_device">选择USB设备</string>
    <string name="choose_wifi_device">选择Wifi设备</string>
    <string name="clear">清空</string>
    <string name="click_to_choose">一键选择</string>
    <string name="commit_successful">提交成功!</string>
    <string name="confirm">确定</string>
    <string name="connect">连 接</string>
    <string name="connected">已连接</string>
    <string name="coupon">"优惠:优惠券 抵扣 %1$s
 \u0009\u0009\u0009\u0009积分 \u0009\u0009\u0009抵扣%2$s"</string>
    <string name="coupon_info">"优惠信息:
"</string>
    <string name="device_does_not_support_bluetooth">本机不支持蓝牙功能</string>
    <string name="eighty_percent_off">8折</string>
    <string name="fail_connect">连接失败</string>
    <string name="fifty_percent_off">5折</string>
    <string name="font_big">大号</string>
    <string name="font_small">小号</string>
    <string name="forty_percent_off">4折</string>
    <string name="gallery">从相册选取</string>
    <string name="gathering_money">是否已收完款</string>
    <string name="gd_totality">挂单总数:</string>
    <string name="hang_order">挂单</string>
    <string name="help">帮助</string>
    <string name="income">收入</string>
    <string name="income_cash">收入现金</string>
    <string name="info_settings">消息设置</string>
    <string name="input_account">请输入帐号</string>
    <string name="input_ip">输入IP</string>
    <string name="input_password">请输入密码</string>
    <string name="input_port">输入端口</string>
    <string name="internet_access">网口连接</string>
    <string name="kitchen_font">厨房字体</string>
    <string name="kitchen_main_ip">厨房总控机IP:</string>
    <string name="largess">赠送: %1$s</string>
    <string name="line">走纸行数</string>
    <string name="loading">正在加载...</string>
    <string name="login">登录</string>
    <string name="login_system">登录系统</string>
    <string name="machine_address">地址</string>
    <string name="machine_name">设备名称</string>
    <string name="net_error">网络错误，请检查网络！</string>
    <string name="net_order_inform">网单通知</string>
    <string name="ninety_percent_off">9折</string>
    <string name="no_authority">没有权限进行此项操作！</string>
    <string name="no_exist">文件不存在</string>
    <string name="no_off">10折</string>
    <string name="no_one">一张图片也没有</string>
    <string name="no_permissions">应用需要必要的运行权限</string>
    <string name="no_sd">暂无外部存储</string>
    <string name="no_select_pic">您还没有选择图片哦</string>
    <string name="nodata">暂无数据</string>
    <string name="off">优惠</string>
    <string name="order">点单</string>
    <string name="order_merge">订单合并</string>
    <string name="order_totality">订单总数:</string>
    <string name="other_settings">其他设置</string>
    <string name="out">该账号已在其他地方登陆</string>
    <string name="paired_devices">已配对的设备</string>
    <string name="particulars">详情</string>
    <string name="password_toggle_content_description">Toggle password visibility</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="pay">支付</string>
    <string name="pay_automatic">自动付款</string>
    <string name="pay_mix">组合支付</string>
    <string name="pay_succeed">收款成功</string>
    <string name="pay_type">支付方式:</string>
    <string name="permission">权限(permission)</string>
    <string name="please_scan_pay_code">请扫付款码</string>
    <string name="port_id">打印机端口号 :</string>
    <string name="port_type">端口类型</string>
    <string name="print_device">打印设备</string>
    <string name="print_page_quantity">打印张数</string>
    <string name="print_table_number">打印桌单</string>
    <string name="printer_ip">打印机IP</string>
    <string name="printer_size">打印机规格</string>
    <string name="promotional_quantity">促销单数:</string>
    <string name="quantity">数量:</string>
    <string name="quit">退出</string>
    <string name="recharge">充值</string>
    <string name="recharge_succeed">会员充值成功，是否立即点餐？</string>
    <string name="return_cash">找零</string>
    <string name="return_order_inform">退单申请提醒</string>
    <string name="return_order_yes_or_no">是否退单?</string>
    <string name="return_succeed">退款成功!</string>
    <string name="scan">扫描</string>
    <string name="scanned">被扫</string>
    <string name="search_device">搜索设备</string>
    <string name="select_type">请选择您的上传方式</string>
    <string name="setting">设置</string>
    <string name="seventy_percent_off">7折</string>
    <string name="shopping_guide_choose">导购员选择</string>
    <string name="should_have_cash">应有现金</string>
    <string name="should_pay">应收款 : %1$s</string>
    <string name="sixty_percent_off">6折</string>
    <string name="size">规格:</string>
    <string name="storage_inform">库存预警提醒</string>
    <string name="string_help_text">"当前应用缺少必要权限。

请点击\"设置\"-\"权限\"-打开所需权限。"</string>
    <string name="success_connect">连接成功</string>
    <string name="taste">口味:</string>
    <string name="ten_percent_off">1折</string>
    <string name="test">测试</string>
    <string name="thirty_percent_off">3折</string>
    <string name="ticket_comment">"注 : 小票logo建议使用300*200的
 jpg,bap.gif.png格式的黑白图片"</string>
    <string name="ticket_logo">"小票
LOGO"</string>
    <string name="ticket_logo_choose">选择</string>
    <string name="time_second_diff">时间间隔(秒)</string>
    <string name="tip_choose_address">请选择设备地址</string>
    <string name="tip_choose_bluetooth_device">请先选择蓝牙设备</string>
    <string name="tip_choose_usb_device">请先选择USB设备</string>
    <string name="tip_choose_wifi_device">请先选择wifi设备</string>
    <string name="tip_connect">您还未连接打印机，请先在设置中连接</string>
    <string name="tip_disconnect">断开之前的连接？</string>
    <string name="tip_disconnected">已断开当前连接</string>
    <string name="tip_have_no_found_bluetooth_device">未在附近找到蓝牙设备</string>
    <string name="tip_have_no_found_wifi_device">未找到打印机设备</string>
    <string name="tip_have_no_paired_device">您还没有已配对的设备</string>
    <string name="tip_input_correct_ip">请输入正确的IP</string>
    <string name="tip_insert_usb_device">请插入USB设备</string>
    <string name="tip_ip_input">请输入IP</string>
    <string name="tip_port_input">请输入端口</string>
    <string name="tips">提示</string>
    <string name="total">总额</string>
    <string name="total_money">总交易额:</string>
    <string name="true_pay">实收 : %1$s</string>
    <string name="twenty_percent_off">2折</string>
    <string name="unconnected">未连接</string>
    <string name="update_people_quantity">更改人数</string>
    <string name="usb">USB</string>
    <string name="vip_add">添加</string>
    <string name="vip_add_succeed_recharge_yes_or_not">会员添加成功,是否立即充值？</string>
    <string name="vip_adds">会员添加</string>
    <string name="vip_birth">生日:</string>
    <string name="vip_comment">备注:</string>
    <string name="vip_comment_1">备注</string>
    <string name="vip_info">会员信息</string>
    <string name="vip_info_address">地址:</string>
    <string name="vip_info_birth">生日:%1$s</string>
    <string name="vip_info_id">会员账号:</string>
    <string name="vip_info_name">姓名:%1$s</string>
    <string name="vip_info_no">卡号:%1$s</string>
    <string name="vip_info_tel">手机号:</string>
    <string name="vip_name">姓名:</string>
    <string name="vip_no">卡号:</string>
    <string name="vip_no_select">请输入VIP号码进行查询</string>
    <string name="vip_not_exist_add_yes_or_not">该会员不存在,是否添加会员？</string>
    <string name="vip_tel">电话:</string>
    <string name="vip_total_money">会员充值</string>
    <string name="wechat">微信</string>
    <string name="wifi">WIFI</string>
</resources>