<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="18.0sp" android:textColor="@color/white" android:gravity="center_horizontal" android:background="@color/red" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/choose_usb_device" />
    <View android:background="@color/black" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <ListView android:id="@id/lv_dialog_choose_usb_device" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:divider="@color/black" android:dividerHeight="1.0dip" />
    <View android:background="@color/black" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:background="@color/white" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="100.0px">
        <TextView android:id="@id/tv_dialog_choose_usb_device_sure" android:background="@drawable/corner_blue" android:layout_marginRight="@dimen/x2" android:text="@string/confirm" style="@style/corner_textView_bg2" />
        <TextView android:id="@id/tv_dialog_choose_usb_device_cancle" android:background="@drawable/corner_gray" android:text="@string/cancel" style="@style/corner_textView_bg2" />
    </LinearLayout>
    <TextView android:textSize="14.0sp" android:textColor="@color/black" android:id="@id/tv_dialog_choose_usb_device_empty" android:background="@color/white" android:padding="16.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/tip_insert_usb_device" />
</LinearLayout>