<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_width="@dimen/x200" style="@style/dialog_Container">
        <RelativeLayout style="@style/dialog_Container_Top">
            <TextView android:text="@string/vip_info" style="@style/dialog_Container_Top_text" />
            <ImageView android:id="@id/iv_close" style="@style/dialog_Container_Top_img" />
        </RelativeLayout>
        <LinearLayout android:gravity="center" android:layout_height="@dimen/y150" style="@style/dialog_Container_Bottom">
            <TableLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:shrinkColumns="0,1,2">
                <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/x5" android:layout_marginBottom="@dimen/x5">
                    <LinearLayout android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/x10" android:layout_weight="1.0">
                        <TextView android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/x5" android:text="@string/vip_name" />
                        <TextView android:textColor="@color/black" android:id="@id/name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" />
                    </LinearLayout>
                    <LinearLayout android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                        <TextView android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/x5" android:text="@string/vip_info_id" />
                        <TextView android:textColor="@color/black" android:id="@id/account" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/x5" android:layout_marginBottom="@dimen/x5">
                    <LinearLayout android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/x10" android:layout_weight="1.0">
                        <TextView android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/x5" android:text="@string/vip_info_tel" />
                        <TextView android:textColor="@color/black" android:id="@id/phone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" />
                    </LinearLayout>
                    <LinearLayout android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                        <TextView android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/x5" android:text="@string/vip_birth" />
                        <TextView android:textColor="@color/black" android:id="@id/birth" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/x10" android:layout_marginTop="@dimen/x5" android:layout_marginBottom="@dimen/x5">
                    <TextView android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/x5" android:text="@string/vip_info_address" />
                    <TextView android:textColor="@color/black" android:id="@id/address" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" />
                </LinearLayout>
            </TableLayout>
            <LinearLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:id="@id/pay" android:background="@drawable/corner_red" android:layout_marginRight="@dimen/x2" android:text="@string/recharge" style="@style/corner_textView_bg2" />
                <TextView android:id="@id/add" android:background="@drawable/corner_blue" android:layout_marginRight="@dimen/x2" android:text="点单" style="@style/corner_textView_bg2" />
                <TextView android:id="@id/cancle" android:background="@drawable/corner_gray" android:text="@string/cancel" style="@style/corner_textView_bg2" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>